--- a/lms/templates/courseware/dates.html
+++ b/lms/templates/courseware/dates.html
@@ -27,7 +27,7 @@ from openedx.core.djangolib.markup import HTML, Text
                 </h2>
                 % for block, next in zip(course_date_blocks, course_date_blocks[1:]):
                     <% active = 'active' if block.date and (block.date.strftime(block.date_format) == block.current_time.strftime(block.date_format)) else '' %>
-                    <% verified = hasattr(block, 'requires_full_access') and block.requires_full_access %>
+                    <% block_is_verified = hasattr(block, 'requires_full_access') and block.requires_full_access %>
                     <% is_assignment = isinstance(block, CourseAssignmentDate) %>
                     <% next_is_active = 'next-is-active' if next.date and (next.date.strftime(next.date_format) == next.current_time.strftime(next.date_format)) else '' %>
                     % if not (learner_is_verified and isinstance(block, VerifiedUpgradeDeadlineDate)):
@@ -42,7 +42,7 @@ from openedx.core.djangolib.markup import HTML, Text
                                             % if active:
                                                 <div class="pill due">${_('Due Today')}</div>
                                             % endif
-                                            % if verified and not learner_is_verified:
+                                            % if block_is_verified and not learner_is_verified:
                                                 <div class="pill verified"><span class="fa fa-lock verified-icon" aria-hidden="true"></span>${_('Verified Only')}</div>
                                             % endif
                                         % endif
@@ -56,7 +56,7 @@ from openedx.core.djangolib.markup import HTML, Text
                                 </div>
                                 <div class="timeline-description">
                                     ${block.description}
-                                    % if verified and verified_upgrade_link and not learner_is_verified:
+                                    % if block_is_verified and verified_upgrade_link and not learner_is_verified:
                                         ${Text(_('{a_start}Upgrade{a_end}{space}to a Verified Certificate for full access.')).format(
                                             a_start=HTML('<a href={link}>').format(link=verified_upgrade_link),
                                             a_end=HTML('</a>'),
